# habit-tracker-bot

./: README.md  docker-compose.yml  requirements.txt
backend/: alembic.ini  pyproject.toml
backend/app/: database.py  main.py  models.py
telegram_bot/: Dockerfile  bot.py
